--- a/index_TA_table.html
+++ b/index_TA_table.html
@@ -3735,8 +3735,8 @@
       <td>Beijing City</td>
       <td>北京市</td>
       <td>International Relations/Exchange</td>
-      <td>11/17/18</td>
-      <td>11/16/19</td>
+      <td>2018-11-17</td>
+      <td>2019-11-16</td>
       <td>Tsinghua University</td>
       <td>清华大学</td>
       <td>School, College, University, or Training Institution</td>
@@ -8038,8 +8038,25 @@
       <td>Education, Poverty Alleviation, Rural Issues/Development, Youth</td>
       <td>2018-06-29</td>
       <td>2018-07-02</td>
-      <td>Guangdong Province, Zhaoqing City, Guangning Couty Bureau of Education Student Financial Aid Management Office</td>
+      <td>Guangdong Province, Zhaoqing City, Guangning County Bureau of Education Student Financial Aid Management Office</td>
       <td>广东肇庆广宁县教育局学生资助管理办公室</td>
+      <td>Party or Government Entity</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>Education Foundation of the Federation of the Alumni Associations of the Chinese University of Hong Kong Limited</td>
+      <td>香港中文大学校友会联会教育基金会有限公司-小扁担励学行动</td>
+      <td>Hong Kong</td>
+      <td>2019 Little Pole Three Days' Study Journey</td>
+      <td>2019小扁担励学三天之旅</td>
+      <td>Guangdong Province</td>
+      <td>广东省</td>
+      <td>Education, Youth</td>
+      <td>2019-12-27</td>
+      <td>2019-12-29</td>
+      <td>Guangdong Province, Zhaoqing City, Guangning County Bureau of Education (Wenjie Middle School, Tanbu Town Central Elementary School, Jiangtun Ruitong Central Elementary School)</td>
+      <td>广东肇庆广宁县教育局(文傑中学、潭布镇中心小学、江屯瑞桐中心小学)</td>
       <td>Party or Government Entity</td>
       <td>Not Applicable</td>
       <td>Not Applicable</td>
@@ -8157,6 +8174,23 @@
       <td>Economic Development, Environment, International Relations/Exchange</td>
       <td>2020-02-01</td>
       <td>2020-04-30</td>
+      <td>China Association of Circular Economy</td>
+      <td>中国循环经济协会</td>
+      <td>Non-profit or Foundation</td>
+      <td>Unknown</td>
+      <td>（已脱钩）</td>
+    </tr>
+    <tr>
+      <td>Ellen MacArthur Foundation</td>
+      <td>艾伦麦克阿瑟基金会</td>
+      <td>United Kingdom</td>
+      <td>China-EU Circular Economy in Urban Cooperation Dialogue - Helping China's No-Waste City Pilot Construction</td>
+      <td>中欧循环经济在城市合作对话—助力中国无废城市试点建</td>
+      <td>Beijing City</td>
+      <td>北京市</td>
+      <td>Economic Development, Environment, International Relations/Exchange</td>
+      <td>2020-01-02</td>
+      <td>2020-06-30</td>
       <td>China Association of Circular Economy</td>
       <td>中国循环经济协会</td>
       <td>Non-profit or Foundation</td>
@@ -10950,6 +10984,23 @@
       <td>Non-profit or Foundation</td>
       <td>Unknown</td>
       <td>无</td>
+    </tr>
+    <tr>
+      <td>Gallant Ho Charities &amp; Public Well-Being Services (H.K., P.R.C.) Limited</td>
+      <td>中国香港何耀棣慈善及公益事业有限公司</td>
+      <td>Hong Kong</td>
+      <td>Mr. He Zeyun Financial Aid Scholarship and Mr. He Yaohuan Exceptional Talent Scholarship</td>
+      <td>何泽芸先生奖助学金和何耀棣先生优才奖</td>
+      <td>Guangdong Province</td>
+      <td>广东省</td>
+      <td>Education, Poverty Alleviation</td>
+      <td>2019-12-15</td>
+      <td>2019-12-31</td>
+      <td>Dongguan Education Foundation</td>
+      <td>东莞市教育基金会</td>
+      <td>Non-profit or Foundation</td>
+      <td>Dongguan City Bureau of Education</td>
+      <td>东莞市教育局</td>
     </tr>
     <tr>
       <td>General Association of Chinese Students of Macao</td>
@@ -14012,6 +14063,40 @@
       <td>Not Applicable</td>
     </tr>
     <tr>
+      <td>Grace Charity Foundation Limited</td>
+      <td>慈恩基金会有限公司</td>
+      <td>Hong Kong</td>
+      <td>Gansu Province High School Student Financial Aid Activity</td>
+      <td>甘肃省高中生助学活动</td>
+      <td>Gansu Province</td>
+      <td>甘肃省</td>
+      <td>Education, Poverty Alleviation, Youth</td>
+      <td>2020-01-05</td>
+      <td>2020-01-15</td>
+      <td>Gansu Province People’s Government Foreign Affairs Office, Hong Kong and Macau Department</td>
+      <td>甘肃省人民政府外事办公室港澳处</td>
+      <td>Party or Government Entity</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>Grace Charity Foundation Limited</td>
+      <td>慈恩基金会有限公司</td>
+      <td>Hong Kong</td>
+      <td>Gansu Province Caring for the Elderly</td>
+      <td>甘肃省关爱老人</td>
+      <td>Gansu Province</td>
+      <td>甘肃省</td>
+      <td>Aging</td>
+      <td>2020-01-05</td>
+      <td>2020-01-15</td>
+      <td>Gansu Province People’s Government Foreign Affairs Office, Hong Kong and Macau Department</td>
+      <td>甘肃省人民政府外事办公室港澳处</td>
+      <td>Party or Government Entity</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
       <td>Gratia Foundation</td>
       <td>华恩基金会</td>
       <td>Hong Kong</td>
@@ -15108,8 +15193,8 @@
       <td>Chongqing City</td>
       <td>重庆市</td>
       <td>Education, International Relations/Exchange, Science and Technology</td>
-      <td>11/19/19</td>
-      <td>11/18/20</td>
+      <td>2019-11-19</td>
+      <td>2020-11-18</td>
       <td>Chongqing Energy Industry Technical College</td>
       <td>重庆能源工业技师学院</td>
       <td>School, College, University, or Training Institution</td>
@@ -16256,6 +16341,23 @@
       <td>Unkown</td>
     </tr>
     <tr>
+      <td>Hong Kong Child-rity Association</td>
+      <td>香港惠苗协会有限公司</td>
+      <td>Hong Kong</td>
+      <td>Preschool Teacher Peer Training Program</td>
+      <td>“惠苗幼师同行计划”培训</td>
+      <td>Guangxi Zhuang Autonomous Region</td>
+      <td>广西壮族自治区</td>
+      <td>Education, Youth</td>
+      <td>2019-12-26</td>
+      <td>2020-04-16</td>
+      <td>Guangxi Zhuang Ethnic Autonomous Region Teacher Training Center</td>
+      <td>广西壮族自治区教师培训中心</td>
+      <td>Unknown</td>
+      <td>Unknkown</td>
+      <td>Unkown</td>
+    </tr>
+    <tr>
       <td>Hong Kong Chinese and Overseas Chinese Federation</td>
       <td>香港海内外华人华侨联合会</td>
       <td>Hong Kong</td>
@@ -16475,6 +16577,23 @@
       <td>Non-profit or Foundation</td>
       <td>Unknown</td>
       <td>Unknown</td>
+    </tr>
+    <tr>
+      <td>Hong Kong Guangdong Youth Association Limited</td>
+      <td>香港广东青年总会有限公司</td>
+      <td>Hong Kong</td>
+      <td>Kickoff Ceremony for Foshan-Hong Kong-Macau Merging Innovation Base</td>
+      <td>佛港澳青年融创基地启动仪式</td>
+      <td>Guangdong Province</td>
+      <td>广东省</td>
+      <td>International Relations/Exchange</td>
+      <td>2019-12-21</td>
+      <td>2019-12-21</td>
+      <td>Foshan City Youth Entrepreneur Association</td>
+      <td>佛山市青年企业家联合会</td>
+      <td>Non-profit or Foundation</td>
+      <td>Unknown</td>
+      <td>佛山市人民政府相关职能部门</td>
     </tr>
     <tr>
       <td>Hong Kong Holistic Integrated Services Foundation Limited</td>
@@ -17036,6 +17155,23 @@
       <td>Non-profit or Foundation</td>
       <td>Ministry of Education</td>
       <td>教育部</td>
+    </tr>
+    <tr>
+      <td>Hong Kong Seagull Scholarship Limited</td>
+      <td>香港海鸥助学团有限公司</td>
+      <td>Hong Kong</td>
+      <td>Year Two (2019) Financial Aid Scholarship Disbursement</td>
+      <td>香港海鸥助学团第二年（2019年）助学金的发放</td>
+      <td>Ningxia Hui Autonomous Region</td>
+      <td>宁夏回族自治区</td>
+      <td>Education, Poverty Alleviation</td>
+      <td>2019-11-21</td>
+      <td>2019-11-30</td>
+      <td>Ningxia Normal University</td>
+      <td>宁夏师范学院</td>
+      <td>School, College, University, or Training Institution</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
     </tr>
     <tr>
       <td>Hong Kong Sheng Kung Hui Welfare Council Limited</td>
@@ -20999,6 +21135,23 @@
       <td>教育部</td>
     </tr>
     <tr>
+      <td>Kwang Hua Educational Foundation Limited</td>
+      <td>光华教育基金会有限公司</td>
+      <td>Hong Kong</td>
+      <td>2019 Renmin University of China Scholarship</td>
+      <td>2019年中国人民大学奖学金</td>
+      <td>Beijing City</td>
+      <td>北京市</td>
+      <td>Education</td>
+      <td>2019-09-09</td>
+      <td>2019-12-31</td>
+      <td>Renmin University of China Education Foundation</td>
+      <td>北京市中国人民大学教育基金会</td>
+      <td>Non-profit or Foundation</td>
+      <td>Beijing Commission of Education</td>
+      <td>北京市教育委员会</td>
+    </tr>
+    <tr>
       <td>L’Agence Universitaire de la Francophonie</td>
       <td>法语大学联盟</td>
       <td>France</td>
@@ -22486,8 +22639,8 @@
       <td>Guangxi Zhuang Autonomous Region</td>
       <td>广西壮族自治区</td>
       <td>Education, Poverty Alleviation</td>
-      <td>1/1/20</td>
-      <td>12/31/20</td>
+      <td>2020-01-01</td>
+      <td>2020-12-31</td>
       <td>Guangxi Bridge of Compassion Financial Aid Volunteer Association</td>
       <td>广西爱心之桥助学志愿者协会</td>
       <td>Non-profit or Foundation</td>
@@ -22765,6 +22918,40 @@
       <td>Non-profit or Foundation</td>
       <td>Ministry of Education</td>
       <td>教育部</td>
+    </tr>
+    <tr>
+      <td>Macao Youth Association of Patriotic Education</td>
+      <td>澳门爱国教育青年协会</td>
+      <td>Macau</td>
+      <td>Guangdong-Hong Kong-Macao Greater Bay Area High-Level Talent Innovation and Entrepreneurship Employment Station</td>
+      <td>粤港澳大湾区高层次人才创新创业就业驿站</td>
+      <td>Guangdong Province</td>
+      <td>广东省</td>
+      <td>International Relations/Exchange, Labor</td>
+      <td>2019-12-25</td>
+      <td>2019-12-31</td>
+      <td>All-China Postdoctoral Innovation (Jiangmen) Model Center Xinhui Branch Center</td>
+      <td>全国博士后创新（江门）示范中心新会分中心</td>
+      <td>Party or Government Entity</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>Macao Youth Federation</td>
+      <td>澳门青年联合会</td>
+      <td>Macau</td>
+      <td>Youth 100 Trainings Project - Macau Youth Guangxi Fangchenggang Volunteer Teaching</td>
+      <td>青年100培训计划-澳青年广西防城港义教行</td>
+      <td>Guangxi Zhuang Autonomous Region</td>
+      <td>广西壮族自治区</td>
+      <td>Youth</td>
+      <td>2019-12-21</td>
+      <td>2019-12-26</td>
+      <td>Fangchenggang City, Fangcheng District Communist Youth League Committee</td>
+      <td>共青团防城港市防城区委员会</td>
+      <td>Party or Government Entity</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
     </tr>
     <tr>
       <td>Macao Youth Volunteers Association</td>
@@ -24790,6 +24977,23 @@
       <td>Not Applicable</td>
     </tr>
     <tr>
+      <td>National Committee on United States-China Relations</td>
+      <td>美国美中关系全国委员会</td>
+      <td>United States</td>
+      <td>Public Intellectuals Program</td>
+      <td>美国美中关系全国委员会公共知识分子项目</td>
+      <td>Beijing City / Guangdong Province</td>
+      <td>北京市,广东省</td>
+      <td>Education, International Relations/Exchange</td>
+      <td>2020-01-03</td>
+      <td>2020-01-12</td>
+      <td>China Foreign Affairs University</td>
+      <td>外交学院</td>
+      <td>School, College, University, or Training Institution</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
       <td>Natural Resources Defense Council (NRDC)</td>
       <td>自然资源保护协会</td>
       <td>United States</td>
@@ -25825,6 +26029,23 @@
       <td>Non-profit or Foundation</td>
       <td>Ministry of Education</td>
       <td>教育部</td>
+    </tr>
+    <tr>
+      <td>Nitori International Scholarship Foundation</td>
+      <td>公益财团法人似鸟国际奖学财团</td>
+      <td>Japan</td>
+      <td>Scholarship Donations</td>
+      <td>似鸟国际奖学财团捐赠奖学金</td>
+      <td>Tianjin City</td>
+      <td>天津市</td>
+      <td>Education</td>
+      <td>2019-12-15</td>
+      <td>2020-12-14</td>
+      <td>Nankai University Education Foundation</td>
+      <td>天津南开大学教育基金会</td>
+      <td>Non-profit or Foundation</td>
+      <td>Tianjin Education Commission</td>
+      <td>天津市教育委员会</td>
     </tr>
     <tr>
       <td>North America Gee How Oak Tin Association</td>
@@ -29813,8 +30034,8 @@
       <td>Yunnan Province</td>
       <td>云南省</td>
       <td>Education, Poverty Alleviation</td>
-      <td>12/19/19</td>
-      <td>4/30/20</td>
+      <td>2019-12-19</td>
+      <td>2020-04-30</td>
       <td>Yunnan University</td>
       <td>云南大学</td>
       <td>School, College, University, or Training Institution</td>
@@ -32013,6 +32234,23 @@
       <td>Non-profit or Foundation</td>
       <td>Shanghai City, Hongkou District Commission of Commerce</td>
       <td>上海市虹口区商务委员会</td>
+    </tr>
+    <tr>
+      <td>The Cat Fanciers' Association</td>
+      <td>爱猫者协会</td>
+      <td>United States</td>
+      <td>Cat Appreciation Tour</td>
+      <td>喵星人巡回大赏</td>
+      <td>Zhejiang Province</td>
+      <td>浙江省</td>
+      <td>Unknown</td>
+      <td>2019-12-21</td>
+      <td>2020-03-01</td>
+      <td>Hangzhou City, Jianggan District Cute Edelweiss Concept Promotion Center</td>
+      <td>杭州市江干区酢浆草萌宠理念宣传中心</td>
+      <td>Non-profit or Foundation</td>
+      <td>Hangzhou City, Jianggan District Bureau of City Management</td>
+      <td>杭州市江干区城市管理局</td>
     </tr>
     <tr>
       <td>The China Civic Education Promotion Association</td>
@@ -35612,7 +35850,7 @@
       <td>Education, Poverty Alleviation, Youth</td>
       <td>2018-08-05</td>
       <td>2019-08-04</td>
-      <td>Guangdong Province, Zhaoqing City, Guangning Couty Bureau of Education Student Financial Aid Management Office</td>
+      <td>Guangdong Province, Zhaoqing City, Guangning County Bureau of Education Student Financial Aid Management Office</td>
       <td>广东肇庆广宁县教育局学生资助管理办公室</td>
       <td>Party or Government Entity</td>
       <td>Not Applicable</td>
@@ -37305,13 +37543,13 @@
       <td>Virya Foundation Limited</td>
       <td>精进基金有限公司</td>
       <td>Hong Kong</td>
-      <td>NaN</td>
+      <td>Chonqing University Forging Vigorously Ahead Scholarship</td>
       <td>重庆大学精进助学金</td>
       <td>Chongqing City</td>
       <td>重庆市</td>
       <td>Education, Poverty Alleviation</td>
-      <td>12/4/19</td>
-      <td>12/3/20</td>
+      <td>2019-12-04</td>
+      <td>2020-12-03</td>
       <td>Chongqing University Education Development Foundation, Chongqing University Student Affairs Office</td>
       <td>重庆大学教育发展基金会（具体执行部门为重庆大学学工部）</td>
       <td>Non-profit or Foundation</td>
@@ -37351,6 +37589,23 @@
       <td>Non-profit or Foundation</td>
       <td>Shaanxi Province Department of Education</td>
       <td>陕西省教育厅</td>
+    </tr>
+    <tr>
+      <td>Virya Foundation Limited</td>
+      <td>精进基金有限公司</td>
+      <td>Hong Kong</td>
+      <td>Support for Vehicle Purchase</td>
+      <td>赞助购买交通工具</td>
+      <td>Sichuan Province</td>
+      <td>四川省</td>
+      <td>Youth</td>
+      <td>2019-12-25</td>
+      <td>2019-12-31</td>
+      <td>Beichuan Qiang Autonomous County “Big Fish” Youth Development Center</td>
+      <td>北川羌族自治县大鱼青少年公益发展中心</td>
+      <td>Non-profit or Foundation</td>
+      <td>Beichuan Qiang Autonomous County Bureau of Civil Affairs</td>
+      <td>(直接登记)</td>
     </tr>
     <tr>
       <td>Vocal Music Association of China</td>
@@ -37463,8 +37718,8 @@
       <td>Ningxia Hui Autonomous Region / Beijing City / Hebei Province / Shandong Province / Inner Mongolia Autonomous Region / Jiangsu Province / Zhejiang Province / Anhui Province / Fujian Province / Henan Province / Hunan Province / Guangdong Province / Chongqing City / Guizhou Province / Yunnan Province / Shaanxi Province / Gansu Province / Qinghai Province / Xinjiang Uighur Autonomous Region / Liaoning Province</td>
       <td>宁夏回族自治区,北京市,河北省,山西省,内蒙古自治区,江苏省,浙江省,安徽省,福建省,河南省,湖南省,广东省,重庆市,贵州省,云南省,陕西省,甘肃省,青海省,新疆维吾尔自治区,辽宁省</td>
       <td>Health, Youth</td>
-      <td>1/1/20</td>
-      <td>10/31/20</td>
+      <td>2020-01-01</td>
+      <td>2020-10-31</td>
       <td>China Children and Teenagers’ Fund</td>
       <td>中国儿童少年基金会</td>
       <td>Non-profit or Foundation</td>
@@ -39944,7 +40199,7 @@
       <td>浙江大学物理学系马青博士奖学金</td>
       <td>Zhejiang Province</td>
       <td>浙江省</td>
-      <td>Education</td>
+      <td>Education, Science and Technology</td>
       <td>2018-08-23</td>
       <td>2018-10-23</td>
       <td>Zhejiang University Education Foundation</td>
@@ -39961,7 +40216,7 @@
       <td>浙江大学电气工程学院丁成章奖学金</td>
       <td>Zhejiang Province</td>
       <td>浙江省</td>
-      <td>Education</td>
+      <td>Education, Science and Technology</td>
       <td>2018-08-23</td>
       <td>2018-10-30</td>
       <td>Zhejiang University Education Foundation</td>
@@ -39978,7 +40233,7 @@
       <td>浙江大学电气工程学院丁成章奖学金</td>
       <td>Zhejiang Province</td>
       <td>浙江省</td>
-      <td>Education</td>
+      <td>Education, Science and Technology</td>
       <td>2018-08-23</td>
       <td>2018-10-30</td>
       <td>Zhejiang University Education Foundation</td>
@@ -39995,7 +40250,7 @@
       <td>浙江大学电气工程学院杜汝琎奖学金</td>
       <td>Zhejiang Province</td>
       <td>浙江省</td>
-      <td>Education</td>
+      <td>Education, Science and Technology</td>
       <td>2018-08-23</td>
       <td>2018-10-23</td>
       <td>Zhejiang University Education Foundation</td>
@@ -40012,7 +40267,7 @@
       <td>浙江大学航空航天学院谢贻权奖学金</td>
       <td>Zhejiang Province</td>
       <td>浙江省</td>
-      <td>Education</td>
+      <td>Education, Science and Technology</td>
       <td>2018-08-23</td>
       <td>2018-10-23</td>
       <td>Zhejiang University Education Foundation</td>
@@ -40029,7 +40284,7 @@
       <td>浙江大学物理学系马青博士奖学金</td>
       <td>Zhejiang Province</td>
       <td>浙江省</td>
-      <td>Education</td>
+      <td>Education, Science and Technology</td>
       <td>2018-08-28</td>
       <td>2019-06-30</td>
       <td>Zhejiang University Education Foundation</td>
@@ -40046,7 +40301,7 @@
       <td>浙江大学电气工程学院丁成章奖学金</td>
       <td>Zhejiang Province</td>
       <td>浙江省</td>
-      <td>Education</td>
+      <td>Education, Science and Technology</td>
       <td>2018-08-28</td>
       <td>2019-06-30</td>
       <td>Zhejiang University Education Foundation</td>
@@ -40097,7 +40352,7 @@
       <td>浙江大学电气工程学院杜汝琎奖学金</td>
       <td>Zhejiang Province</td>
       <td>浙江省</td>
-      <td>Education</td>
+      <td>Education, Science and Technology</td>
       <td>2018-08-23</td>
       <td>2018-10-23</td>
       <td>Zhejiang University Education Foundation</td>
@@ -40131,7 +40386,7 @@
       <td>浙江大学电气工程学院杜汝琎奖学金</td>
       <td>Zhejiang Province</td>
       <td>浙江省</td>
-      <td>Education</td>
+      <td>Education, Science and Technology</td>
       <td>2018-08-28</td>
       <td>2019-06-30</td>
       <td>Zhejiang University Education Foundation</td>
@@ -40151,6 +40406,40 @@
       <td>Education, Poverty Alleviation, Science and Technology</td>
       <td>2019-01-18</td>
       <td>2020-01-10</td>
+      <td>Zhejiang University Education Foundation</td>
+      <td>浙江大学教育基金会</td>
+      <td>Non-profit or Foundation</td>
+      <td>Ministry of Education</td>
+      <td>教育部</td>
+    </tr>
+    <tr>
+      <td>Zhejiang University Education Foundation (USA)</td>
+      <td>浙江大学（美国）教育基金会</td>
+      <td>United States</td>
+      <td>Polytechnic Institute, Zhejiang University Student Internship Abroad</td>
+      <td>浙江大学工程师学院学生海外实习</td>
+      <td>Zhejiang Province</td>
+      <td>浙江省</td>
+      <td>Education, International Relations/Exchange, Science and Technology</td>
+      <td>2019-11-20</td>
+      <td>2020-11-14</td>
+      <td>Zhejiang University Education Foundation</td>
+      <td>浙江大学教育基金会</td>
+      <td>Non-profit or Foundation</td>
+      <td>Ministry of Education</td>
+      <td>教育部</td>
+    </tr>
+    <tr>
+      <td>Zhejiang University Education Foundation (USA)</td>
+      <td>浙江大学（美国）教育基金会</td>
+      <td>United States</td>
+      <td>College of Electrical Engineering Zhejiang University Ding Chengzhang Scholarship</td>
+      <td>浙江大学电气工程学院丁成章奖学金</td>
+      <td>Zhejiang Province</td>
+      <td>浙江省</td>
+      <td>Education, Science and Technology</td>
+      <td>2019-11-21</td>
+      <td>2020-11-20</td>
       <td>Zhejiang University Education Foundation</td>
       <td>浙江大学教育基金会</td>
       <td>Non-profit or Foundation</td>
