--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -2806,6 +2806,17 @@
       <td>Tianjin</td>
     </tr>
     <tr>
+      <td>International Taekwon-Do Federation</td>
+      <td>国际跆拳道联盟大韩民国协会</td>
+      <td>Zhejiang Department of Education</td>
+      <td>浙江省体育局</td>
+      <td>South Korea</td>
+      <td>International Relations/Exchange, Sport</td>
+      <td>Zhejiang</td>
+      <td>2019-12-25</td>
+      <td>China</td>
+    </tr>
+    <tr>
       <td>International Trademark Association (Beijing)</td>
       <td>国际商标协会</td>
       <td>Beijing Intellectual Property Office</td>
@@ -5147,6 +5158,17 @@
       <td>Shanghai</td>
       <td>2017-12-29</td>
       <td>China</td>
+    </tr>
+    <tr>
+      <td>Union of Industrialists and Entrepreneurs of Kyrgyzstan</td>
+      <td>吉尔吉斯工业家和企业家联盟</td>
+      <td>Chongqing Commission of Commerce</td>
+      <td>重庆市商务委员会</td>
+      <td>Kyrgyzstan</td>
+      <td>Trade</td>
+      <td>Chongqing</td>
+      <td>2019-12-27</td>
+      <td>Chongqing</td>
     </tr>
     <tr>
       <td>United States Humane Society Charitable Foundation</td>
