--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -397,6 +397,17 @@
       <td>Liaoning</td>
     </tr>
     <tr>
+      <td>Association Generale Chine-Afrique (Shanghai)</td>
+      <td>中国-非洲总商会</td>
+      <td>Shanghai Commission of Commerce</td>
+      <td>上海市商务委员会</td>
+      <td>Madagascar</td>
+      <td>Trade</td>
+      <td>Shanghai</td>
+      <td>2020-01-14</td>
+      <td>Shanghai</td>
+    </tr>
+    <tr>
       <td>Association Generale Chine-Afrique (Sichuan)</td>
       <td>中国-非洲总商会</td>
       <td>Sichuan Department of Commerce</td>
@@ -1585,7 +1596,7 @@
       <td>Beijing, Chongqing, Fujian, Guangdong, Guangxi, Hebei, Heilongjiang, Hubei, Hunan, Jiangsu, Jilin, Liaoning, Shaanxi, Shandong, Shanghai, Shanxi, Sichuan, Tianjin, Zhejiang</td>
     </tr>
     <tr>
-      <td>Federation Francaise Du Pret A Porter Feminin (FFPAPF)</td>
+      <td>Fédération Française du Prêt à Porter Féminin (FFPAPF)</td>
       <td>法国女装成衣协会</td>
       <td>Shanghai Commission of Commerce</td>
       <td>上海市商务委员会</td>
@@ -1717,7 +1728,7 @@
       <td>Yunnan</td>
     </tr>
     <tr>
-      <td>French Federation for the International Promotion of Men's Clothing</td>
+      <td>French Federation for the International Promotion of Men’s Clothing</td>
       <td>法国男装国际促进会</td>
       <td>Shanghai Commission of Commerce</td>
       <td>上海市商务委员会</td>
@@ -3070,6 +3081,17 @@
       <td>China</td>
     </tr>
     <tr>
+      <td>K-Beauty Industry Association</td>
+      <td>社团法人K-Beauty产业协会</td>
+      <td>Hunan Department of Commerce</td>
+      <td>湖南省商务厅</td>
+      <td>South Korea</td>
+      <td>Trade</td>
+      <td>Hunan</td>
+      <td>2020-01-15</td>
+      <td>Hunan</td>
+    </tr>
+    <tr>
       <td>Kadoorie Farm and Botanic Garden</td>
       <td>嘉道理农场暨植物园</td>
       <td>National Forestry and Grassland Administration (formerly State Forestry Administration)</td>
@@ -4032,7 +4054,7 @@
       <td>Guangdong Department of Education</td>
       <td>广东省教育厅</td>
       <td>United States</td>
-      <td>Education, Infrastructure, Poverty Alleviation</td>
+      <td>Education, Infrastructure, Poverty Alleviation, Youth</td>
       <td>Guangdong</td>
       <td>2019-12-13</td>
       <td>Anhui, Gansu, Guangdong, Guizhou, Hebei, Heilongjiang, Henan, Hubei, Hunan, Inner Mongolia, Jiangsu, Jiangxi, Jilin, Ningxia, Shaanxi, Shandong, Shanxi, Yunnan, Zhejiang</td>
@@ -4054,7 +4076,7 @@
       <td>Sichuan Department of Education</td>
       <td>四川省教育厅</td>
       <td>United States</td>
-      <td>Education, Infrastructure, Poverty Alleviation</td>
+      <td>Education, Infrastructure, Poverty Alleviation, Youth</td>
       <td>Sichuan</td>
       <td>2018-07-24</td>
       <td>Sichuan</td>
@@ -4747,7 +4769,7 @@
       <td>Guangdong Youth Federation</td>
       <td>广东省青年联合会</td>
       <td>Australia</td>
-      <td>Arts and Culture, Economic Development, International Relations/Exchange</td>
+      <td>Arts and Culture, Economic Development, International Relations/Exchange, Youth</td>
       <td>Guangdong</td>
       <td>2019-08-19</td>
       <td>Guangdong</td>
