--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -232,6 +232,17 @@
       <td>Beijing</td>
     </tr>
     <tr>
+      <td>American International Chamber of Commerce (Shandong)</td>
+      <td>美国国际商会</td>
+      <td>Shandong Department of Commerce</td>
+      <td>山东省商务厅</td>
+      <td>United States</td>
+      <td>Arts and Culture, Education, Health, Trade/Industry Association</td>
+      <td>Shandong</td>
+      <td>2020-02-14</td>
+      <td>Shandong</td>
+    </tr>
+    <tr>
       <td>American International Chamber of Commerce (Sichuan)</td>
       <td>美国国际商会</td>
       <td>Sichuan Department of Commerce</td>
@@ -3721,7 +3732,7 @@
     <tr>
       <td>Netherlands Trade Promotion Council (Jinan, Shandong)</td>
       <td>荷兰贸易促进委员会济南代表处</td>
-      <td>Shandong Commission of Commerce</td>
+      <td>Shandong Department of Commerce</td>
       <td>山东省商务厅</td>
       <td>The Netherlands</td>
       <td>Science and Technology, Trade/Industry Association</td>
@@ -3743,7 +3754,7 @@
     <tr>
       <td>Netherlands Trade Promotion Council (Qingdao, Shandong)</td>
       <td>荷兰贸易促进委员会青岛代表处</td>
-      <td>Shandong Commission of Commerce</td>
+      <td>Shandong Department of Commerce</td>
       <td>山东省商务厅</td>
       <td>The Netherlands</td>
       <td>Science and Technology, Trade/Industry Association</td>
