--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -2850,6 +2850,17 @@
       <td>China</td>
     </tr>
     <tr>
+      <td>International Young Makers Alliance</td>
+      <td>国际青年创客联盟有限公司</td>
+      <td>Guangdong Department of Human Resources and Social Security</td>
+      <td>广东省人力资源和社会保障厅</td>
+      <td>Hong Kong</td>
+      <td>International Relations/Exchange, Science and Technology, Youth</td>
+      <td>Guangdong</td>
+      <td>2020-02-27</td>
+      <td>Anhui, Beijing, Chongqing, Fujian, Gansu, Guangdong, Guangxi, Guizhou, Hainan, Hebei, Heilongjiang, Henan, Hubei, Hunan, Inner Mongolia, Jiangsu, Jiangxi, Jilin, Liaoning, Ningxia, Qinghai, Shaanxi, Shandong, Shanghai, Shanxi, Sichuan, Tianjin, Yunnan, Zhejiang</td>
+    </tr>
+    <tr>
       <td>International Zinc Association (Shanghai)</td>
       <td>国际锌协会</td>
       <td>Shanghai Commission of Commerce</td>
@@ -5400,6 +5411,17 @@
       <td>Beijing</td>
       <td>2017-09-04</td>
       <td>Anhui, Beijing, Fujian, Guangdong, Guangxi, Heilongjiang, Jiangsu, Jilin, Qinghai, Shanghai, Tibet, Yunnan, Zhejiang</td>
+    </tr>
+    <tr>
+      <td>Wine Institute</td>
+      <td>加州葡萄酒协会</td>
+      <td>Shanghai Commission of Commerce</td>
+      <td>上海市商务委员会</td>
+      <td>United States</td>
+      <td>Trade/Industry Association</td>
+      <td>Shanghai</td>
+      <td>2020-02-26</td>
+      <td>China</td>
     </tr>
     <tr>
       <td>Winrock International</td>
