--- a/monthly/NewPSUHeatmap.html
+++ b/monthly/NewPSUHeatmap.html
@@ -179,6 +179,7 @@ var margin = { top: 190, right: 10, bottom: 50, left: 435 },
   "China Banking and Insurance Regulatory Commission",
   "China Council for the Promotion of International Trade",
   "China Disabled Persons' Federation",
+  "China Film Administration",
   "China Meteorological Administration",
   "China Securities Regulatory Commission",
   "Chinese Association for International Understanding†**",
@@ -218,7 +219,6 @@ var margin = { top: 190, right: 10, bottom: 50, left: 435 },
   "National Radio and Television Administration",
   "People’s Bank of China",
   "Shanghai Institutes for International Studies†**",
-  "State Administration for Market Regulation",
   "State Administration of Cultural Heritage",
   "State Administration for Market Regulation",
   "State Administration of Taxation",
