--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -4368,6 +4368,17 @@
       <td>China</td>
     </tr>
     <tr>
+      <td>Royal Aeronautical Society</td>
+      <td>英国皇家航空学会</td>
+      <td>Shanghai Commission of Science and Technology</td>
+      <td>上海市科学技术委员会</td>
+      <td>United Kingdom</td>
+      <td>Science and Technology, Trade/Industry Association</td>
+      <td>Shanghai</td>
+      <td>2020-03-06</td>
+      <td>China</td>
+    </tr>
+    <tr>
       <td>Russia Foodstuff Producers and Suppliers Association</td>
       <td>俄罗斯食品生产者与供应者协会</td>
       <td>Shanghai Commission of Commerce</td>
