--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -1563,6 +1563,17 @@
       <td>China</td>
     </tr>
     <tr>
+      <td>Europe China OBOR Culture &amp; Tourism Development Committee</td>
+      <td>欧中OBOR文化和旅游发展委员会</td>
+      <td>Hainan Department of Tourism, Culture, Radio, Television, and Sport</td>
+      <td>海南省旅游和文化广电体育厅</td>
+      <td>Belgium</td>
+      <td>Arts and Culture, Science and Technology, Tourism</td>
+      <td>Hainan</td>
+      <td>2020-03-25</td>
+      <td>Hainan</td>
+    </tr>
+    <tr>
       <td>European American Chamber of Commerce and Industry</td>
       <td>欧美工商会</td>
       <td>Beijing Commission of Commerce</td>
@@ -3243,6 +3254,17 @@
       <td>Economic Development, International Relations/Exchange, Trade/Industry Association</td>
       <td>Guangxi</td>
       <td>2018-10-19</td>
+      <td>China</td>
+    </tr>
+    <tr>
+      <td>Korea Health Industry Development Institute (KHIDI)</td>
+      <td>韩国保健产业振兴院</td>
+      <td>Council For The Promotion Of International Trade Shanghai</td>
+      <td>上海市国际贸易促进委员会</td>
+      <td>South Korea</td>
+      <td>Health, Trade/Industry Association</td>
+      <td>Shanghai</td>
+      <td>2020-03-27</td>
       <td>China</td>
     </tr>
     <tr>
@@ -5476,6 +5498,17 @@
       <td>Health</td>
       <td>Shandong</td>
       <td>2017-05-18</td>
+      <td>China</td>
+    </tr>
+    <tr>
+      <td>World Association of Nuclear Operators (WANO)</td>
+      <td>世界核电运营者协会</td>
+      <td>Shanghai Commission of Economy and Informatization</td>
+      <td>上海市经济和信息化委员会</td>
+      <td>United Kingdom</td>
+      <td>Energy, Science and Technology</td>
+      <td>Shanghai</td>
+      <td>2020-03-27</td>
       <td>China</td>
     </tr>
     <tr>
