--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -848,6 +848,17 @@
       <td>Gansu</td>
     </tr>
     <tr>
+      <td>Children's Medical Foundation (CMF)</td>
+      <td>儿童医健基金会有限公司</td>
+      <td>Yunnan Health Commission (formerly Yunnan Health and Family Planning Commission)</td>
+      <td>云南省卫生健康委员会</td>
+      <td>Hong Kong</td>
+      <td>Health, Infrastructure, Youth</td>
+      <td>Yunnan</td>
+      <td>2020-03-31</td>
+      <td>Gansu, Guangxi, Guizhou, Hainan, Hebei, Inner Mongolia, Ningxia, Shaanxi, Shanxi, Yunnan</td>
+    </tr>
+    <tr>
       <td>Children’s Education Foundation</td>
       <td>台湾财团法人幼儿教育基金会</td>
       <td>Fujian Department of Education</td>
@@ -1568,7 +1579,7 @@
       <td>Hainan Department of Tourism, Culture, Radio, Television, and Sport</td>
       <td>海南省旅游和文化广电体育厅</td>
       <td>Belgium</td>
-      <td>Arts and Culture, Science and Technology, Tourism</td>
+      <td>Arts and Culture, International Relations/Exchange, Science and Technology, Tourism</td>
       <td>Hainan</td>
       <td>2020-03-25</td>
       <td>Hainan</td>
