--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -705,6 +705,17 @@
       <td>China</td>
     </tr>
     <tr>
+      <td>Canada World Jiang Clan Trade and Cultural Development Promotion Association</td>
+      <td>加拿大世界江氏经贸文化发展促进总会</td>
+      <td>Fujian Department of Culture and Tourism (formerly Fujian Department of Culture)</td>
+      <td>福建省文化和旅游厅</td>
+      <td>Canada</td>
+      <td>Arts and Culture, International Relations/Exchange, Tourism, Trade/Industry Association</td>
+      <td>Fujian</td>
+      <td>2020-04-01</td>
+      <td>China</td>
+    </tr>
+    <tr>
       <td>Canada-China Children’s Health Foundation</td>
       <td>加中儿童健康基金会</td>
       <td>Guangdong Health Commission (formerly Guangdong Health and Family Planning Commission)</td>
@@ -3270,7 +3281,7 @@
     <tr>
       <td>Korea Health Industry Development Institute (KHIDI)</td>
       <td>韩国保健产业振兴院</td>
-      <td>Council For The Promotion Of International Trade Shanghai</td>
+      <td>Council for the Promotion of International Trade, Shanghai</td>
       <td>上海市国际贸易促进委员会</td>
       <td>South Korea</td>
       <td>Health, Trade/Industry Association</td>
